test/tests/bad/rec-type-def.carth
;; RecTypeDef

(data Foo (Foo Foo))
